[package]
name = "polars-tools"
version = "0.1.0"
edition = "2021"
description = "Schema validation and column helpers for Polars dataframes"
license = "MIT"

[dependencies]
polars = { version = "0.46", features = ["lazy", "temporal"] }
thiserror = "1.0"

[dependencies.polars-tools-derive]
path = "polars-tools-derive"

[features]
default = []
chrono = ["dep:chrono"]


[workspace]
members = ["polars-tools-derive"]
