[package]
name = "polars-tools"
version = "0.1.1"
edition = "2021"
description = "Schema validation and column helpers for Polars dataframes"
license = "MIT"

[dependencies]
polars = { version = "0.46", features = ["lazy", "temporal"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", optional = true }

[dependencies.polars-tools-derive]
path = "polars-tools-derive"

[features]
default = []
chrono = ["dep:chrono"]


[workspace]
members = ["polars-tools-derive"]
